--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@ Do not hesitate to follow the diagram with a finger to fully understand
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="MemorixImpro.png" alt="MemorixImpro">
+<img src="Memorix.png" alt="Memorix">
 </div>
 <div class="title">Figure 1. Open the image in a new tab for a bigger size</div>
 </div>
@@ -1005,7 +1005,7 @@ af91f6549d776d17cXXXXXXXXXXXXXXX</pre>
 <p>Let&#8217;s do it :</p>
 </div>
 <div class="paragraph">
-<p><code>ssh t@192.168.0.77 -p 8022 -L 6666:127.0.0.1:5555 -N</code></p>
+<p><code>ssh <a href="mailto:hacker@oreo.local">hacker@oreo.local</a> -p 8022 -L 6666:127.0.0.1:5555 -N</code></p>
 </div>
 <div class="paragraph">
 <p>This command will map remote port 5555 to local port 6666, let it run in the background</p>
@@ -1024,13 +1024,18 @@ x86_64:/ # cat /data/root.txt
 3b4ae23cd7323dedfXXXXXXXXXXXXXXX</pre>
 </div>
 </div>
+<div class="paragraph">
+<p>Thanks for reading,<br>
+Regards,<br>
+<a href="https://gitlab.com/peekz">@pookz</a>, <a href="https://github.com/charlie08-dev">@charlie08</a> ,<a href="https://github.com/Kaporos">@Kaporos</a></p>
+</div>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-07-15 23:33:39 +0200
+Last updated 2020-07-15 23:58:31 +0200
 </div>
 </div>
 <style>
