--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <!-- q6XHbaBHu/cLyYAFwCbTkmffRuB0oticTDF4lbHLh8hNAxo8Brwgnvzd9bzQt0Oz -->
 
-
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
 <style>
 /* Asciidoctor default stylesheet | MIT License | https://asciidoctor.org */
@@ -1000,7 +999,7 @@ af91f6549d776d17cXXXXXXXXXXXXXXX</pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_privilege_escalation_the_root">Privilege Escalation: The ROOT</h3>
+<h3 id="_7_privilege_escalation_the_root">7.Privilege Escalation: The ROOT</h3>
 <div class="paragraph">
 <p>Yeees the user flag , but now , how can we become root ?</p>
 </div>
@@ -1044,7 +1043,7 @@ Regards,<br>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-07-16 12:45:47 +0200
+Last updated 2020-07-16 12:50:54 +0200
 </div>
 </div>
 <style>
