--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@ Do not hesitate to follow the diagram with a finger to fully understand
 <p><code>python script.py notes_db panama.android.notes_preferences.xml --vaultonly</code></p>
 </div>
 <div class="paragraph">
-<p>--vaultonly parameter tell the script not to display entries that are not in the vault</p>
+<p>--vaultonly parameter tells the script not to display entries that are not in the vault</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -1043,7 +1043,7 @@ Regards,<br>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-07-16 12:50:54 +0200
+Last updated 2020-07-16 12:59:40 +0200
 </div>
 </div>
 <style>
