--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <!-- q6XHbaBHu/cLyYAFwCbTkmffRuB0oticTDF4lbHLh8hNAxo8Brwgnvzd9bzQt0Oz -->
 
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
 <style>
 /* Asciidoctor default stylesheet | MIT License | https://asciidoctor.org */
@@ -450,7 +451,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>VulnHub CTF Walkthrought
+<p>VulnHub CTF Walkthrough
 2020/07/15</p>
 </div>
 <div class="paragraph">
@@ -485,7 +486,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-During this walkthrought, oreo.local equals oreo ip adress
+During this walkthrough, oreo.local equals oreo ip adress
 </td>
 </tr>
 </table>
@@ -1043,7 +1044,7 @@ Regards,<br>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-07-16 12:59:40 +0200
+Last updated 2020-07-17 11:02:06 +0200
 </div>
 </div>
 <style>
