--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
-<script src="https://karlie.vavo.be/main.js"></script>
+<script src="https://karlie.vavo.be/karlie.js"></script>
 <div class="paragraph">
 <p>VulnHub CTF Walkthrough
 2020/07/15</p>
