--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ A stroke of luck, we have the apk, and the data of the application</p>
 <p>Shared preferences in shared_prefs&gt;panama.android.notes_preferences.xml</p>
 </li>
 <li>
-<p>App apk
+<p>App apk <br>
 Why shared preferences? If we look inside this file, we can find a salt, a hash, and a masterkey</p>
 </li>
 </ul>
