Add pip requirements

--- a/index.html
+++ b/index.html
@@ -887,6 +887,12 @@ Do not hesitate to follow the diagram with a finger to fully understand
 <p>Now, let&#8217;s use it , that&#8217;s so simple , you just have to do<br></p>
 </div>
 <div class="paragraph">
+<p><code>pip install backports.pbkdf2 pycrypto</code><br></p>
+</div>
+<div class="paragraph">
+<p>And then :<br></p>
+</div>
+<div class="paragraph">
 <p><code>python script.py notes_db panama.android.notes_preferences.xml --vaultonly</code></p>
 </div>
 <div class="paragraph">
@@ -1051,7 +1057,7 @@ Regards,<br>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-07-21 10:26:43 UTC
+Last updated 2020-07-26 16:35:19 UTC
 </div>
 </div>
 <style>
